feat: booking checkout WIP