@@ -230,7 +230,7 @@ public class TheaterScheduleActivity extends AppCompatActivity implements MovieS
                                             .ratingResponse(m.getRatingResponse())
                                             .reviews(m.getReviews())
                                             .build())
-                                    .collect(Collectors.toList());
+                                    .toList();
                             AtomicInteger i = new AtomicInteger(0);
                             movies.forEach(m -> movieIdMap.put(i.getAndIncrement(), m.getMovieId()));
 
@@ -273,7 +273,7 @@ public class TheaterScheduleActivity extends AppCompatActivity implements MovieS
                             intent.putExtra(IntentKey.MOVIE_TITLE.name(), movieResponse.getName());
                             intent.putExtra(IntentKey.MOVIE_NAME.name(), movieResponse.getName());
                             intent.putExtra("MOVIE_TRAILER_LINK", movieResponse.getTrailerUrl());
-                            intent.putExtra(IntentKey.MOVIE_GENRES.name(), new ArrayList<>(movieResponse.getGenreResponses().stream().map(GenreResponse::getName).collect(Collectors.toList())));
+                            intent.putExtra(IntentKey.MOVIE_GENRES.name(), new ArrayList<>(movieResponse.getGenreResponses().stream().map(GenreResponse::getName).toList()));
                             intent.putExtra(IntentKey.MOVIE_LENGTH.name(), movieResponse.getLength());
                             intent.putExtra(IntentKey.MOVIE_DESCRIPTION.name(), movieResponse.getDescription());
                             intent.putExtra(IntentKey.PUBLISHED_DATE.name(), movieResponse.getReleaseDate());
@@ -281,9 +281,9 @@ public class TheaterScheduleActivity extends AppCompatActivity implements MovieS
                             intent.putExtra(IntentKey.BACKGROUND_IMAGE_URL.name(), movieResponse.getBanner());
                             intent.putExtra(IntentKey.TRAILER.name(), movieResponse.getTrailerUrl());
                             intent.putExtra(IntentKey.MOVIE_RATING.name(), movieResponse.getRatingResponse().getName());
-                            intent.putExtra(IntentKey.MOVIE_PERFORMER_NAME.name(), new ArrayList<>(movieResponse.getPerformerResponses().stream().map(PerformerResponse::getName).collect(Collectors.toList())));
-                            intent.putStringArrayListExtra(IntentKey.MOVIE_PERFORMER_TYPE.name(), new ArrayList<>(movieResponse.getPerformerResponses().stream().map(p->p.getTypeId().toString()).collect(Collectors.toList())));
-                            intent.putExtra(IntentKey.MOVIE_COMMENT.name(), new ArrayList<>(movieResponse.getReviews().stream().map(Review::getUserComment).collect(Collectors.toList())));
+                            intent.putExtra(IntentKey.MOVIE_PERFORMER_NAME.name(), new ArrayList<>(movieResponse.getPerformerResponses().stream().map(PerformerResponse::getName).toList()));
+                            intent.putStringArrayListExtra(IntentKey.MOVIE_PERFORMER_TYPE.name(), new ArrayList<>(movieResponse.getPerformerResponses().stream().map(p->p.getTypeId().toString()).toList()));
+                            intent.putExtra(IntentKey.MOVIE_COMMENT.name(), new ArrayList<>(movieResponse.getReviews().stream().map(Review::getUserComment).toList()));
                             intent.putExtra(IntentKey.AVERAGE_STAR.name(), movieResponse.getReviews().stream().mapToInt(Review::getUserVote).average().orElse(0.0));
                         }
                     }
